@@ -1,1 +1,1 @@
-usr/lib/*/girepository-1.0 usr/lib/
+usr/lib/*/girepository-1.0/Cogl-* usr/lib/girepository-1.0
