@@ -1,0 +1,1 @@
+usr/lib/*/girepository-1.0/CoglPango-* usr/lib/girepository-1.0
